[package]
name = "psidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
git2 = "0.15"
clap = { version = "3.2", features = ["derive"] }
home = "0.5"
strum = "0.24"
strum_macros = "0.24"