[package]
name = "psidb-lib"
version = "0.1.0"
authors = ["Paul Virally <pvirally@gmail.com>"]
edition = "2021"
description = "A sci(ψ)entific database management system designed to help you remember which datasets correspond to which experiments!"
repository = "https://github.com/PaulVirally/psidb"
license = "MIT"
keywords = ["database", "scientific", "science"]
categories = ["database-implementations", "science"]

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
git2 = "0.15"
clap = { version = "3.2", features = ["derive"] }
home = "0.5"
strum = "0.24"
strum_macros = "0.24"
regex = "1.6.0"
itertools = "0.10.3"
