[package]
name = "psidb-gui"
version = "0.1.0"
authors = ["Paul Virally <pvirally@gmail.com>"]
edition = "2021"
description = "A sci(ψ)entific database management system designed to help you remember which datasets correspond to which experiments!"
repository = "https://github.com/PaulVirally/psidb"
license = "MIT"
keywords = ["database", "scientific", "science"]
categories = ["database-implementations", "science"]

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
psidb-lib = { path = "../../psidb-lib" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
